--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 <body>
 <input type="text" name="txt" value="Hello" onchange="myFunction(this.value)">
-  <h1 id="displaytext"></h1>
+  <h1 id="displaytext">NULL</h1>
 <script>
 function myFunction(val) {
   var ip = val;
