TEST: seems like it was not triggering
~ Changed from a variable to a static changing text, as it was not working.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <script>
 function myFunction(val) {
   var ip = val;
-  document.getElementById("displaytext").value = ip;
+  document.getElementById("displaytext").value = "test";
 }
 </script>
 </body>
