TEST: Using innerHTML now
~ Now using innerHTML for the changing

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 <head>
 <title>Tycho's Avolites Web Console</title>
@@ -9,7 +10,7 @@
 <script>
 function myFunction(val) {
   var ip = val;
-  document.getElementById("displaytext").value = "test";
+  document.getElementById("displaytext").innerHTML = "CHANGES"; 
 }
 </script>
 </body>
